--- a/src/scss/pages/frontendMentor/profileCardChallenge/_profileCardChallenge.scss
+++ b/src/scss/pages/frontendMentor/profileCardChallenge/_profileCardChallenge.scss
@@ -19,8 +19,8 @@
   height: 1000px;
 
   @include mq($pc-mobile-breakpoint) {
-    top: -350px;
-    left: -350px;
+    top: -250px;
+    left: -200px;
     width: 700px;
     height: 700px;
   }
@@ -35,7 +35,7 @@
 
   @include mq($pc-mobile-breakpoint) {
     bottom: -350px;
-    right: -350px;
+    right: -200px;
     width: 700px;
     height: 700px;
   }
